--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
                             <h2>Super Cool Project</h2>
                             <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
                             <div class="iconHolder">
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z" />
                                 </svg>
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C12.36,19.5 12.72,19.5 13.08,19.45C13.03,19.13 13,18.82 13,18.5C13,18.14 13.04,17.78 13.1,17.42C12.74,17.46 12.37,17.5 12,17.5C8.24,17.5 4.83,15.36 3.18,12C4.83,8.64 8.24,6.5 12,6.5C15.76,6.5 19.17,8.64 20.82,12C20.7,12.24 20.56,12.45 20.43,12.68C21.09,12.84 21.72,13.11 22.29,13.5C22.56,13 22.8,12.5 23,12C21.27,7.61 17,4.5 12,4.5M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M18,14.5V17.5H15V19.5H18V22.5H20V19.5H23V17.5H20V14.5H18Z" />
                                 </svg>
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M8 17L12 13H15.2C15.6 14.2 16.7 15 18 15C19.7 15 21 13.7 21 12S19.7 9 18 9C16.7 9 15.6 9.8 15.2 11H12L8 7V3H3V8H6L10.2 12L6 16H3V21H8V17Z" />
                                 </svg>
                             </div>
@@ -125,13 +125,13 @@
                             <h2>Less Cool Project</h2>
                             <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
                             <div class="iconHolder">
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z" />
                                 </svg>
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C12.36,19.5 12.72,19.5 13.08,19.45C13.03,19.13 13,18.82 13,18.5C13,18.14 13.04,17.78 13.1,17.42C12.74,17.46 12.37,17.5 12,17.5C8.24,17.5 4.83,15.36 3.18,12C4.83,8.64 8.24,6.5 12,6.5C15.76,6.5 19.17,8.64 20.82,12C20.7,12.24 20.56,12.45 20.43,12.68C21.09,12.84 21.72,13.11 22.29,13.5C22.56,13 22.8,12.5 23,12C21.27,7.61 17,4.5 12,4.5M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M18,14.5V17.5H15V19.5H18V22.5H20V19.5H23V17.5H20V14.5H18Z" />
                                 </svg>
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M8 17L12 13H15.2C15.6 14.2 16.7 15 18 15C19.7 15 21 13.7 21 12S19.7 9 18 9C16.7 9 15.6 9.8 15.2 11H12L8 7V3H3V8H6L10.2 12L6 16H3V21H8V17Z" />
                                 </svg>
                             </div>
@@ -140,13 +140,13 @@
                             <h2>Impossible App</h2>
                             <p>Inhac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
                             <div class="iconHolder">
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z" />
                                 </svg>
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C12.36,19.5 12.72,19.5 13.08,19.45C13.03,19.13 13,18.82 13,18.5C13,18.14 13.04,17.78 13.1,17.42C12.74,17.46 12.37,17.5 12,17.5C8.24,17.5 4.83,15.36 3.18,12C4.83,8.64 8.24,6.5 12,6.5C15.76,6.5 19.17,8.64 20.82,12C20.7,12.24 20.56,12.45 20.43,12.68C21.09,12.84 21.72,13.11 22.29,13.5C22.56,13 22.8,12.5 23,12C21.27,7.61 17,4.5 12,4.5M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M18,14.5V17.5H15V19.5H18V22.5H20V19.5H23V17.5H20V14.5H18Z" />
                                 </svg>
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M8 17L12 13H15.2C15.6 14.2 16.7 15 18 15C19.7 15 21 13.7 21 12S19.7 9 18 9C16.7 9 15.6 9.8 15.2 11H12L8 7V3H3V8H6L10.2 12L6 16H3V21H8V17Z" />
                                 </svg>
                             </div>
@@ -155,13 +155,13 @@
                             <h2>Easy Peasy App</h2>
                             <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
                             <div class="iconHolder">
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z" />
                                 </svg>
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C12.36,19.5 12.72,19.5 13.08,19.45C13.03,19.13 13,18.82 13,18.5C13,18.14 13.04,17.78 13.1,17.42C12.74,17.46 12.37,17.5 12,17.5C8.24,17.5 4.83,15.36 3.18,12C4.83,8.64 8.24,6.5 12,6.5C15.76,6.5 19.17,8.64 20.82,12C20.7,12.24 20.56,12.45 20.43,12.68C21.09,12.84 21.72,13.11 22.29,13.5C22.56,13 22.8,12.5 23,12C21.27,7.61 17,4.5 12,4.5M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M18,14.5V17.5H15V19.5H18V22.5H20V19.5H23V17.5H20V14.5H18Z" />
                                 </svg>
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M8 17L12 13H15.2C15.6 14.2 16.7 15 18 15C19.7 15 21 13.7 21 12S19.7 9 18 9C16.7 9 15.6 9.8 15.2 11H12L8 7V3H3V8H6L10.2 12L6 16H3V21H8V17Z" />
                                 </svg>
                             </div>
@@ -170,13 +170,13 @@
                             <h2>Ad Blocker</h2>
                             <p>Quisque eget rutrum nisl. Nam augue justo,cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
                             <div class="iconHolder">
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z" />
                                 </svg>
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C12.36,19.5 12.72,19.5 13.08,19.45C13.03,19.13 13,18.82 13,18.5C13,18.14 13.04,17.78 13.1,17.42C12.74,17.46 12.37,17.5 12,17.5C8.24,17.5 4.83,15.36 3.18,12C4.83,8.64 8.24,6.5 12,6.5C15.76,6.5 19.17,8.64 20.82,12C20.7,12.24 20.56,12.45 20.43,12.68C21.09,12.84 21.72,13.11 22.29,13.5C22.56,13 22.8,12.5 23,12C21.27,7.61 17,4.5 12,4.5M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M18,14.5V17.5H15V19.5H18V22.5H20V19.5H23V17.5H20V14.5H18Z" />
                                 </svg>
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M8 17L12 13H15.2C15.6 14.2 16.7 15 18 15C19.7 15 21 13.7 21 12S19.7 9 18 9C16.7 9 15.6 9.8 15.2 11H12L8 7V3H3V8H6L10.2 12L6 16H3V21H8V17Z" />
                                 </svg>
                             </div>
@@ -185,13 +185,13 @@
                             <h2>Money Maker</h2>
                             <p>Praesent convallis, libero quis congue elementum, nunc ante faucibis sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
                             <div class="iconHolder">
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z" />
                                 </svg>
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C12.36,19.5 12.72,19.5 13.08,19.45C13.03,19.13 13,18.82 13,18.5C13,18.14 13.04,17.78 13.1,17.42C12.74,17.46 12.37,17.5 12,17.5C8.24,17.5 4.83,15.36 3.18,12C4.83,8.64 8.24,6.5 12,6.5C15.76,6.5 19.17,8.64 20.82,12C20.7,12.24 20.56,12.45 20.43,12.68C21.09,12.84 21.72,13.11 22.29,13.5C22.56,13 22.8,12.5 23,12C21.27,7.61 17,4.5 12,4.5M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M18,14.5V17.5H15V19.5H18V22.5H20V19.5H23V17.5H20V14.5H18Z" />
                                 </svg>
-                                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                                     <path fill="black" d="M8 17L12 13H15.2C15.6 14.2 16.7 15 18 15C19.7 15 21 13.7 21 12S19.7 9 18 9C16.7 9 15.6 9.8 15.2 11H12L8 7V3H3V8H6L10.2 12L6 16H3V21H8V17Z" />
                                 </svg>
                             </div>
@@ -201,9 +201,45 @@
                 <div id="right">
                     <div id="up">
                         <h2 class="head">Announcements</h2>
+                        <div class="sideBox">
+                                <div class="textBox">
+                                    <h5>Site Maintenance</h5>
+                                    <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...</p>
+                                </div>
+                                <div class="textBox">
+                                    <h5>Community Share Day</h5>
+                                    <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</p>
+                                </div>
+                                <div class="textBox" id="last">
+                                    <h5>Update Privacy Policy</h5>
+                                    <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</p>
+                                </div>
+                        </div>
                     </div>
                     <div id="down">
                         <h2 class="head">Trending</h2>
+                        <div id="userBoxBox">                        
+                            <div class="userBox">
+                                <img src="img/2.png">
+                                <h4 class="nameLink">@tegan</h4>
+                                <p>World Peace Builder</p>
+                            </div>
+                            <div class="userBox">
+                                <img src="img/3.png">
+                                <h4 class="nameLink">@CopyCat</h4>
+                                <p>Super Cool Project</p>
+                            </div>
+                            <div class="userBox">
+                                <img src="img/4.png">
+                                <h4 class="nameLink">@kendall</h4>
+                                <p>Life Changing App</p>
+                            </div>
+                            <div class="userBox">
+                                <img src="img/5.png">
+                                <h4 class="nameLink">@alex</h4>
+                                <p>No Traffic Maker</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
